--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Birthday Site</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Page Title</title>
   </head>
 
   <body>
-    <span>Happy Birthday TT!</span>
+    <div id="title-container">
+      <div class="cloud"></div>
+      <h1 id="title">happy birthday tt</h1>
+    </div>
     <p>Happy 20th britdhay. Yayyyyyy</p>
+
+    <img src="images\cinnamon-roll-fly.gif" alt="Cinnamon Roll flying gif" />
+    <img
+      src="images\cinnamon-roll-partyhat.png"
+      alt="Cinnamon Roll wearing a party hat image"
+    />
+    <img
+      src="images\cinnamon-roll-with-balloons.png"
+      alt="Cinnamon Roll with balloons image"
+    />
+    <img src="images\snoopy-with-flowers.png" alt="Snoopy with flowers image" />
+    <img src="images\snoopy-birthday.png" alt="Happy birthday Snoopy image" />
+    <img
+      src="images\cinnamon-roll-with-birthdaycake.png"
+      alt="Cinnamon Roll with birthday cake image"
+    />
   </body>
   <script src="script.js"></script>
 </html>
