--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <body>
     <div id="title-container">
-      <div class="cloud"></div>
+      <div class="cloud1"></div>
+      <div class="cloud2"></div>
       <h1 id="title">happy birthday tt</h1>
     </div>
     <p>Happy 20th britdhay. Yayyyyyy</p>
