hopefuly prevent oversized images on web page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     />
     <img src="images\snoopy-with-flowers.png" alt="Snoopy with flowers image" />
     <img src="images\snoopy-birthday.png" alt="Happy birthday Snoopy image" />
-    <img
+    <!-- <img
       src="images\cinnamon-roll-with-birthdaycake.png"
       alt="Cinnamon Roll with birthday cake image"
-    />
+    /> -->
   </body>
   <script src="script.js"></script>
 </html>
