clouds and attempt title vert. center

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="title-container">
       <div class="cloud1"></div>
       <div class="cloud2"></div>
+      <div class="cloud3"></div>
       <h1 id="title">happy birthday tt</h1>
     </div>
     <p>Happy 20th britdhay. Yayyyyyy</p>
