adjust flying cinnamon roll image to be below title

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
       <div class="cloud2"></div>
       <div class="cloud3"></div>
       <h1 id="title">happy birthday tt</h1>
+      <img
+        id="fly"
+        src="images\cinnamon-roll-fly.gif"
+        alt="Cinnamon Roll flying gif"
+      />
     </div>
     <p>Happy 20th britdhay. Yayyyyyy</p>
 
-    <img src="images\cinnamon-roll-fly.gif" alt="Cinnamon Roll flying gif" />
     <img
       src="images\cinnamon-roll-partyhat.png"
       alt="Cinnamon Roll wearing a party hat image"
